manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gateway
  name: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      name: webapp
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp-container
        image: 999568710647.dkr.ecr.us-west-2.amazonaws.com/webapp:1.11.0
        ports:
        - containerPort: 8080
