manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: gateway
spec:
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
